--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/client": "^4.0.11",
+    "@reduxjs/toolkit": "^2.11.2",
+    "graphql": "^16.12.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "6.29.0"
   },
   "devDependencies": {
@@ -34,6 +39,7 @@
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^30.0.2",
     "cypress": "^15.8.0",
     "eslint": "^9.8.0",
@@ -47,8 +53,10 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "22.3.3",
+    "postcss": "8.4.38",
     "prettier": "~3.6.2",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
